--- a/airflow-dags/mnt/airflow/airflow.cfg
+++ b/airflow-dags/mnt/airflow/airflow.cfg
@@ -595,7 +595,7 @@ smtp_ssl = False
 # Example: smtp_user = airflow
 smtp_user = ralphyflex@gmail.com
 # Example: smtp_password = airflow
-smtp_password = vfpqcjqytxwvwzao
+smtp_password = testpassword
 smtp_port = 587
 smtp_mail_from = ralphyflex@gmail.com
 smtp_timeout = 30
